style: fix z-index layering and privacy policy headline width

--- a/styles/pages/pages_css/privacy-policy.css
+++ b/styles/pages/pages_css/privacy-policy.css
@@ -1,7 +1,7 @@
 .headline {
     display: flex;
     flex-direction: row;
-    width: 84%;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     a {
