--- a/styles/style.css
+++ b/styles/style.css
@@ -628,7 +628,7 @@ a {
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: 1000;
+  z-index: 1200;
   border: 0;
   background-color: rgba(42, 54, 71, 0.3);
   backdrop-filter: blur(3px);
